tests/baselines/reference/parserConstructorAmbiguity4.errors.txt
==== tests/cases/conformance/parser/ecmascript5/Generics/parserConstructorAmbiguity4.ts (3 errors) ====
    new Date<A ? B : C
             ~
!!! error TS2304: Cannot find name 'A'.
                 ~
!!! error TS2304: Cannot find name 'B'.
                     ~
!!! error TS2304: Cannot find name 'C'.